[package]
name = "fuzzy_clock_rust"
version = "0.1.0"
authors = ["Kevin Traver <kevintraver@gmail.com>","Morgan Nesbitt"]

[dependencies]
chrono = "0.3"
chrono-tz = "0.3.2"
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
lazy_static = "0.2.8"
rocket = "0.2.7"
rocket_codegen = "0.2.7"

[dependencies.clap]
version = "2.24.2"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "color" ]
