[package]
name = "fuzzy_clock_rust"
version = "0.1.0"
authors = ["Kevin Traver <kevintraver@gmail.com>","Morgan Nesbitt"]

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.8.21"
lazy_static = "1.4.0"
rocket = "0.4.10"
rocket_codegen = "0.4.10"

[dependencies.clap]
version = "2.24.2"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "color" ]
